# mediawiki-extdist

./: .gitignore  flake.nix  pyproject.toml
mediawiki_extdist/: __init__.py
