[tool.poetry]
name = "mediawiki-extdist"
version = "0.0.1"
description = "package MediaWiki extension distribution tarballs"
authors = ["labs-tools-extdist contributors"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
mediawiki-extdist = "mediawiki_extdist:main"

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
